--- a/todo-app/frontend/package.json
+++ b/todo-app/frontend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --progress --colors --inline --hot",
-    "production": "webpack --progress -p"
+    "production": "webpack -p --define proccess.env.NODE_ENV='\"production\"' --progress"
   },
   "keywords": [],
   "author": "",
